# gov_openapi_agent

./: .env_local  .gitignore  README.md  __init__.py  agent.py  agent_mcp_server.py  main.py  pyproject.toml  web.py
.gemini/commands/: openapi-agent.toml
config/: agent_config.yaml  api_server_openapi.json  web_openapi.json
config/openapi_specs/: i運動資訊平台_openapi.json  swagger.json  中央氣象署開放資料平台_openapi.yaml  交通部運輸研究運輸技術研究中心_openapi.yaml  交通部運輸資料流通服務平台_openapi.json  客家委員會開放資料平台_openapi.json  政府資料標準平臺_openapi.yaml  政府開放資料測試平台_openapi.json  (+40 more)
data/: openapi_dept.csv  政府組織架構_全.txt
docs/: AI_Open_Data_SDK_Agent_Checklist.md  AI_Open_Data_SDK_Agent_Goal.md  AI_Open_Data_SDK_Agent_Methodology.md  GovOpenApiAgent_Spec.md  GovOpenDataPlatform_spec.md  openapi_spec_Issues.md
gov_opendata_platform/: README.md  gov_opendata_platform.py  main.py  schema.sql
results/: I運動資訊平台_demo_1.md  adk_api_server_byspec_demo_1.md  both_platform_demo_1.md  geminicli-mcp-sse_demo1.md  openapi-shp-proc-revised.md  platform_query_bymcp_demo_1.md  using-openapi-spec-method_demo_1.md  using-openapi-spec-method_demo_1_text.md  web_query_demo_1.md  政府開放資料測試平台_mcp_1.md
resuluts/: both_platform_demo_2.md  交通部運輸資料流通服務平台_demo_1.md  客家委員會開放資料平台_demo_1.md  政府開放資料測試平台_demo_1.md  經濟部水利署水利資料開放平台_demo_1.md
tasks/: file_based_open_data_method.md  using_adk_api_server_usage.md
tmp/: reservoir_water_conditions.csv
validate_openapi/: fix_openapi_default_types.py  fix_openapi_operation_ids.py  fix_openapi_response_keys.py  fix_openapi_security.py  validate_openapi.py  勞動部資料開放服務平台_openapi.json
(+2 files in other folders)
