[project]
name = "gov-openapi-agent"
version = "0.1.0"
description = "An MCP server,CLI for interacting with government open data via OpenAPI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "WuLung Hsu", email = "wuulong@gmail.com" }] # Placeholder
keywords = ["mcp", "llm", "openapi", "government", "data"]
license = { text = "MIT" } # Assuming MIT license based on other projects
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anyio>=4.5",
    "click>=8.2.0",
    "mcp",
    "starlette",
    "uvicorn",
    "python-dotenv",
    "PyYAML",
    "requests",
    "google-generativeai",
    "google-adk",
]

[project.scripts]
gov-openapi-agent-mcp = "agent_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] # Include the current directory as a package

[tool.pyright]
include = ["."]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]
